--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
            var name = document.getElementById("Name").value;
            var email = document.getElementById("Email").value;
            var contact = document.getElementById("Contact").value;
-           var mess = document.getElementById("message").value;
+           var message = document.getElementById("message").value;
 
            var body = "Name: " + name + "<br/> Email:" + email + "<br/> Contact Number:" + contact + "<br/> message:" + message;
             
